# profile-manager-service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yaml
alembic/: env.py
postman/: profile-manager-service.postman_collection.json
scripts/: create_table.sql  insert_data.py
src/: app.py  settings.py
src/api/: customer.py
src/app/: app.py
src/auth/: bearer_token_auth.py  jwt_token_auth.py  verify_client.py
src/db/: base_class.py  errors.py  session.py
src/db/repositories/: base.py  customer.py
src/db/tables/: customer.py
src/exceptions/: core.py  customer.py
src/models/: base_model.py  customer.py
src/models/schema/: in_customer.py  out_customer.py
src/services/: customer_service.py
src/util/: create_jwt_token.py
tests/: conftest.py
tests/api/: test_create_password.oy.py  test_create_password.py  test_login.py
tests/unit/services/: test_customer.py
tests/unit/util/: generate_jwt_token.py
